[workspace]
members = [
  "bloomur",
  "cheap-clone",
  "dbutils",
  "indexsort",
  "waterark",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/al8n/layer0"
edition = "2021"
rust-version = "1.56.0"
homepage = "https://github.com/al8n/layer0"
categories = ["asynchronous", "data-structures", "concurrency", "database-implementations", "development-tools"]
license = "MIT OR Apache-2.0"

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false