[package]
name = "cheap-clone"
version = "0.1.8"
edition = "2021"
repository = "https://github.com/al8n/layer0/tree/main/cheap-clone"
homepage = "https://github.com/al8n/layer0/tree/main/cheap-clone"
documentation = "https://docs.rs/cheap-clone"
description = "A trait which indicates that such type can be cloned cheaply."
license = "MIT OR Apache-2.0"
rust-version = "1.56.0"

[features]
default = ["std"]
alloc = []
std = ["alloc", "either?/default", "smol_str?/default", "triomphe?/std", "faststr?/default"]

[dependencies]
paste = "1"

among = { version = "0.1", default-features = false, optional = true }
bytes = { version = "1", default-features = false, optional = true }
either = { version = "1", default-features = false, optional = true }
smol_str = { version = "0.3", default-features = false, optional = true }
triomphe = { version = "0.1", default-features = false, optional = true }
faststr = { version = "0.2", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
