[package]
name = "dbutils"
version = "0.12.9"
repository = "https://github.com/al8n/layer0/tree/main/dbutils"
edition.workspace = true
rust-version = "1.81.0"
homepage.workspace = true
license.workspace = true
metadata.workspace = true
description = "Utils for developing databases"
categories = ["data-structures", "database-implementations", "development-tools"]

[features]
default = ["std", "cheap-clone/default"]
alloc = ["cheap-clone/alloc"]
std = ["alloc", "cheap-clone/std", "crc32fast?/std", "either/default", "xxhash-rust?/std", "triomphe01?/std"]

among = ["cheap-clone/among"]
bytes1 = ["dep:bytes1", "cheap-clone/bytes1"]
either = ["cheap-clone/either"]
smol_str03 = ["dep:smol_str03", "cheap-clone/smol_str03"]
faststr02 = ["dep:faststr02", "cheap-clone/faststr02"]
triomphe01 = ["dep:triomphe01", "cheap-clone/triomphe01"]


crc32 = ["crc32fast"]
xxhash64 = ["xxhash-rust/xxh64"]
xxhash3 = ["xxhash-rust/xxh3"]


[dependencies]
equivalent-flipped = "0.1"
either = { version = "1", default-features = false }
cheap-clone = { version = "0.2", path = "../cheap-clone", default-features = false }
paste = "1"

triomphe01 = { package = "triomphe", version = "0.1", default-features = false, optional = true }

crc32fast = { version = "1", optional = true, default-features = false }
xxhash-rust = { version = "0.8", optional = true, default-features = false }

bytes1 = { package = "bytes", version = "1", default-features = false, optional = true }
smallvec01 = { package = "smallvec", version = "1", default-features = false, optional = true, features = ["const_generics"] }
smallvec02 = { package = "smallvec", version = "2.0.0-alpha.7", default-features = false, optional = true }
smallvec-wrapper01 = { package = "smallvec-wrapper", version = "0.1", optional = true, default-features = false, features = ["const_generics"] }
smol_str03 = { package = "smol_str", version = "0.3", default-features = false, optional = true }
faststr02 = { package = "faststr", version = "0.2", default-features = false, optional = true }

tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
rstest = "0.22"
quickcheck = "1"
proptest = "1"
