[package]
name = "indexsort"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/al8n/layer0/tree/main/indexsort"
license = "MIT OR Apache-2.0"
description = "Yet another sort crate, porting Golang sort package to Rust."
keywords = ["sort", "sorting"]
categories = ["algorithms", "data-structures", "no-std"]
rust-version = "1.85.0"

[dependencies]

[dev-dependencies]
divan = "0.1"
rand = "0.10"

[[bench]]
name = "sort"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
