[package]
name = "virtualfs"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true
description = "A placeholder"

[features]
default = ["std"]
std = []

[dependencies]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
