[package]
name = "virtualfs"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true
description = "A placeholder"

[features]
default = ["std"]
std = ["fs4"]
future = []
memmap = ["std", "dep:memmap2"]

[dependencies]
memmap2 = { version = "0.9", optional = true }
fs4 = { version = "0.8", optional = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
