[package]
name = "waterark"
version = "0.1.0"
repository = "https://github.com/al8n/layer0/tree/main/waterark"
edition.workspace = true
rust-version = "1.81.0"
homepage.workspace = true
license.workspace = true
metadata.workspace = true
description = "Watermark for implementing optimistic SSI (Serializable Snapshot Isolation) transactions"
keywords = ["watermark", "optimistic", "SSI", "Serializable Snapshot Isolation", "transactions"]
categories = ["asynchronous", "data-structures", "concurrency", "database-implementations", "development-tools"]

[features]
default = ["std"]
alloc = ["hashbrown"]
sync = ["std", "wg/std", "crossbeam-channel"]
std = ["async-channel?/default", "futures-channel?/default", "crossbeam-utils/default", "scopeguard/use_std"]
future = ["async-channel", "futures-util", "futures-channel", "event-listener/default"]

parking_lot = ["wg?/parking_lot"]

smol = ["agnostic-lite/smol", "future"]
async-std = ["agnostic-lite/async-std", "future"]
tokio = ["agnostic-lite/tokio", "futures-util", "future"]
wasm = ["agnostic-lite/wasm", "futures-util", "future"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
agnostic-lite = { version = "0.3", optional = true }
atomic_refcell = "0.1"
smallvec-wrapper = { version = "0.1", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
scopeguard = { version = "1" }

crossbeam-queue = { version = "0.3", optional = true, default-features = false }
hashbrown = { version = "0.14", optional = true }

crossbeam-channel = { version = "0.5", optional = true }
wg = { version = "0.9", optional = true, default-features = false }

async-channel = { version = "2", optional = true, default-features = false }
event-listener = { version = "5", optional = true, default-features = false }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["async-await-macro"] }
futures-channel = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

tracing = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
