[package]
name = "wisckey"
version = "0.0.0"
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
metadata.workspace = true
description = "A placeholder"

[features]
default = ["std"]
std = ["bytes/default", "virtualfs/default", "either/default"]
future = ["virtualfs/future"]

[dependencies]
bytes.workspace = true
either = { version = "1", default-features = false }
virtualfs.workspace = true
paste = "1"